--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1>Muhammad Ali</h1>
+
     <h2>Please enter your Percentage</h2>
 
     <form onsubmit="conditionCheck(); return false">
